# smp-fs

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  package-lock.json
assets/: favicon.ico.br  main.css.br  sig-logo.svg.br  tailwind.css  tailwind.css.br
public/: tailwind.css
src/: api_data.rs  block_page.rs  landing_page.rs  main.rs  miner_page.rs  utils.rs
src/data/: api_data.rs  structs.rs
src/pages/: block_page.rs  landing_page.rs  miner_page.rs
src/routes/: blocks.rs  home.rs  miner.rs
