[package]
name = "smp-fs"
version = "0.1.0"
authors = ["65787978"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.6", features = ["fullstack", "router"] }
serde = "1.0.159"
simple_logger = "5.0.0"
tracing-wasm = "0.2.1"
tracing-subscriber = "0.3.17"
reqwest = "0.12.5"
tracing = "0.1.40"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
