[package]
name = "smp-fs"
version = "0.1.0"
authors = ["65787978"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.2", features = ["fullstack", "router"] }
serde = "1.0.159"
simple_logger = "5.0.0"
tracing-wasm = "0.2.1"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.12.5", features = ["json"] }
tracing = "0.1.40"
manganis = "0.2.2"
dioxus-fullstack = "0.5.6"
serde_json = "1.0.117"
chrono = "0.4.38"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
